# Scriptorium

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/commits/: SKILL.md
.claude/skills/experiments/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/github/: SKILL.md
docs/: brainstorm-scene-break.md  brainstorm.md  model-comparison.md
docs/experiments/: 2026-06-25-surya-baseline.md  2026-06-25-unlimited-baseline.md  2026-06-26-gemma-vision-failure.md  2026-06-26-glm-ocr-baseline.md  2026-06-26-paddleocr-vl-deferred.md  2026-06-26-qwen3vl-baseline.md  2026-06-26-unlimited-grounding.md  2026-06-27-consensus-rover.md  2026-06-29-surya-spell-checker-bias.md  README.md  TEMPLATE.md  ground-truth-ties-mindblast.json
scripts/: build_html.py  consensus.py  detect_scene_breaks.py  extract_pages.py  run_full_book.sh  run_gemma.py  run_glm_ocr.py  run_paddleocr.py  run_qwen3vl.py  run_surya.py  run_unlimited.py
tests/: test_build_html.py  test_consensus.py
