[project]
name = "scriptorium"
version = "0.1.0"
description = "Research pipeline comparing OCR/VLM approaches for converting scanned PDF books into clean EPUBs"
requires-python = ">=3.14"
dependencies = [
    "addict>=2.4.0",
    "easydict>=1.13",
    "einops>=0.8.2",
    "matplotlib>=3.11.0",
    "psutil>=7.2.2",
    "pymupdf>=1.27.2.3",
    "surya-ocr>=0.20.0",
    "torchvision>=0.27.1",
]

[tool.uv]
# surya-ocr 0.20.0 caps pillow<11, but pillow<11 has no cp314 wheels (Python 3.14).
# pillow's API is backward-compatible for surya's usage, so lift the stale ceiling
# and let uv resolve pillow 12.x, which ships cp314 wheels.
override-dependencies = ["pillow>=10.2.0"]
